--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "open-browser-webpack-plugin": "0.0.5",
     "react-hot-loader": "^4.0.0-beta.15",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.1",
