--- a/package.json
+++ b/package.json
@@ -1,55 +1,19 @@
 {
-  "name": "react-builder",
+  "name": "react-ts-template",
   "version": "1.0.0",
-  "description": "react-build use webpack",
+  "description": "react ts template",
   "main": "index.js",
   "scripts": {
-    "clear": "rimraf build",
-    "build": "npm run clear && webpack --config config/webpack.config.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TYRMars/React-Builder.git"
+    "url": "git+https://github.com/TYRMars/react-ts-template.git"
   },
   "author": "Jonathan Zhang",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TYRMars/React-Builder/issues"
+    "url": "https://github.com/TYRMars/react-ts-template/issues"
   },
-  "homepage": "https://github.com/TYRMars/React-Builder#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-loose": "^8.0.0",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "open-browser-webpack-plugin": "0.0.5",
-    "react-hot-loader": "^4.0.0-beta.15",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0"
-  },
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  }
+  "homepage": "https://github.com/TYRMars/react-ts-template#readme"
 }
