--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@storybook/addon-links": "^6.3.4",
     "@storybook/react": "^6.3.4",
     "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.30.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "rollup": "^2.53.1",
