--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "react-ts-template",
+  "name": "react-rollup-ts-template",
+  "outputname": "RRTT",
   "version": "1.0.0",
   "description": "react ts template",
-  "main": "index.js",
+  "source": "src/index.tsx",
+  "main": "dist/index.js",
+  "unpkg": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "rimraf dist && cross-env NODE_ENV=development BABEL_ENV=development rollup -c -w",
+    "start": "start-storybook -p 6006",
     "build": "rimraf dist && cross-env NODE_ENV=production BABEL_ENV=production rollup -c",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepare": "husky install"
   },
@@ -71,5 +75,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "peerDependencies": {
+    "react": ">=16.0.0"
   }
 }
